...
    func collectionView(_ collectionView: UICollectionView, cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
        guard let cell = collectionView.dequeueReusableCell(withReuseIdentifier: "HeroCell", for: indexPath) as? HeroCell else {
            return UICollectionViewCell()
        }
        let hero = viewModel.heroesToDisplay[indexPath.item]
        cell.configure(with: hero)
        cell.accessibilityIdentifier = "heroCellIdentifier"
        cell.isFavorite = viewModel.isFavorite(hero)
        
        cell.didToggleFavorite = { [weak self, weak cell] isFavorite in
            guard let self = self,
                  let cell = cell,
                  let indexPath = collectionView.indexPath(for: cell)
...
